--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Kudo POS Retail</string>
+    <string name="e_wallet">E-Wallet</string>
+    <string name="debit_credit">Kartu Debit/Kredit</string>
+    <string name="cash">Tunai</string>
 </resources>
