Add dialog for showing message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="e_wallet">E-Wallet</string>
     <string name="debit_credit">Kartu Debit/Kredit</string>
     <string name="cash">Tunai</string>
+    <string name="alert_dialog_ok">Iya</string>
+    <string name="alert_dialog_cancel">Batal</string>
+    <string name="title_choose_another_payment_method">"Apakah Anda ingin memilih metode pembayaran yang lain?"</string>
 </resources>
