Display screen input after card detected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="alert_dialog_ok">Iya</string>
     <string name="alert_dialog_cancel">Batal</string>
     <string name="title_choose_another_payment_method">"Apakah Anda ingin memilih metode pembayaran yang lain?"</string>
+    <string name="cancel">Batal</string>
+    <string name="confirm">Konfirm</string>
+    <string name="clear">Hapus</string>
 </resources>
