--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,17 @@
 <resources>
     <string name="app_name">Kudo POS Retail</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_login">Masuk</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
+    <string name="action_sign_in">Masuk atau daftar</string>
+    <string name="action_sign_in_short">Masuk</string>
+    <string name="error_invalid_email">Alamat Email tidak valid</string>
+    <string name="error_invalid_password">Sandi terlalu pendek</string>
+    <string name="error_incorrect_password">Sandi yang dimasukan salah</string>
+    <string name="error_field_required">Wajib diisi</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."</string>
     <string name="e_wallet">E-Wallet</string>
@@ -23,4 +23,6 @@
     <string name="cancel">Batal</string>
     <string name="confirm">Konfirm</string>
     <string name="clear">Hapus</string>
+    <string name="settlement">Settlement</string>
+    <string name="menu_void">Batalkan Transaksi</string>
 </resources>
